# Needle-AI

./: AGENT_BREVITY_UPDATE.md  AGENT_FORFEIT_IMPLEMENTATION.md  AGENT_ROUTING_FIX.md  CHANGES_SUMMARY.md  COMPANY_FILTERING_IMPLEMENTATION.md  CONVERSATION_HISTORY_IMPLEMENTATION.md  ENUM_TO_STRING_MIGRATION.md  EXPERIMENTAL_CHAT_IMPLEMENTATION.md  FAKE_ORCHESTRATOR_GUIDE.md  FAKE_ORCHESTRATOR_SUMMARY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_USER_SYNC.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_SCRAPING.md  JSON_OUTPUT_FORMATTING.md  MAX_ITERATIONS_FIX.md  METADATA_FIX_SUMMARY.md  ORCHESTRATOR_IMPLEMENTATION.md  QUICK_FIX_STREAMING.md  QUICK_START_DB.md  QUICK_START_SCRAPING.md  RAW_OUTPUT_COLUMN_ADDITION.md  RAW_OUTPUT_MARKDOWN_IMPLEMENTATION.md  README.md  REAL_REVIEW_SCRAPING_IMPLEMENTATION.md  SQL_ERROR_HANDLING_IMPLEMENTATION.md  STEP_STATUS_FIX.md  STREAMING_AND_LOGGING_COMPLETE.md  STREAMING_FIX.md  STREAMING_FIXES_APPLIED.md  STREAMING_IMPLEMENTATION.md  TODO.md  TOOL_CALL_STREAMING.md  TREE_IMPLEMENTATION_COMPLETE.md  USER_DATASET_SECURITY_FIX.md  USER_SYNC_IMPLEMENTATION.md  VALKEY_MIGRATION.md  VISUALIZATION_TOOL_FIX.md  docker-compose.yml
back_end/: .dockerignore  .env.template  .gitignore  README.md  alembic.ini  pyproject.toml
back_end/alembic/: env.py
back_end/alembic/versions/: 001_initial_schema_with_7_core_tables.py
back_end/app/: __init__.py  dependencies.py  main.py
back_end/app/api/: __init__.py  deps.py
back_end/app/database/: session.py
back_end/app/models/: __init__.py  base.py  chat.py  company.py  user.py  user_dataset.py
back_end/app/services/: __init__.py  chat_service.py  company_service.py  user_dataset_service.py  user_service.py
back_end/app/utils/: logging.py
backend/: .gitignore  AGENT_LOOP_PREVENTION.md  Dockerfile  HISTORY_FIX_SUMMARY.md  N8N_STREAMING_GUIDE.md  N8N_WORKFLOW_README.md  README.md  README_EMBEDDINGS.md  RUN_TREE_TESTS.md  TESTING_GUIDE.md  TREE_ARCHITECTURE_README.md  agno_ex.py  alembic.ini  all_mock_reviews.csv  debug_agno_stream.py  g2-reviews.json  my_os.py  n8n-workflow-orchestrator.json  n8n-workflow-streaming.json  pyproject.toml  test_agno_tree.py  test_crewai_tree.py  test_fake_orchestrator.py  test_openai_tree.py  test_streaming.py  test_valkey.py  trustpilot-reviews.json
backend/.cursor/rules/: llm-call-logging.mdc
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_product_review_platform.py  003_add_llm_call_logging.py  004_remove_unused_user_fields.py  005_add_chat_message_steps.py  005_add_execution_tree.py  006_add_cascade_deletes.py  007_add_structured_output_to_chat_message_.py  008_add_completed_at_to_chat_messages.py  009_add_review_embeddings.py  010_remove_vector_id.py  011_add_simple_source_column.py  012_add_user_datasets.py  013_add_eda_fields_to_user_datasets.py  013_add_thought_to_chat_message_steps.py  014_add_status_to_chat_message_steps.py  014_update_user_datasets_table_name_format.py  015_fix_step_status_enum_case.py  016_remove_enum_constraint.py  017_add_raw_output_to_chat_message_steps.py  018_add_g2_trustpilot_sources.py  019_convert_enum_to_string.py  020_add_product_intelligence.py  021_add_review_urls_to_companies.py  8c18c2291307_add_cascade_deletes.py
backend/app/: __init__.py  cli.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/agents/: __init__.py  execution_tree.py
backend/app/api/: __init__.py  deps.py
backend/app/cli/: README.md  __init__.py  main.py  router.py
backend/app/cli_commands/: main.py  review_commands.py
backend/app/core/: __init__.py  celery_app.py  config_validator.py  container.py  exceptions.py  monitoring.py  tracing.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/middleware/: __init__.py  tracing_middleware.py
backend/app/models/: __init__.py  base.py  chat.py  company.py  completion.py  execution_tree.py  feedback.py  product_intelligence.py  scraping.py  user_dataset.py  workflow.py
backend/app/optimal_workflow/: AGENTS_README.md  AGENT_COMPARISON.md  AGENT_DOCUMENTATION.md  ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  MULTI_TIER_WORKFLOW.md  QUICK_START.md  README.md  __init__.py  basic_flow_2.py  basic_flow_3.py  basic_flow_test.py  events.py  main.py  medium_agent.py  medium_workflow.py  product_review_workflow.py  query_classifier.py  simple_agent.py  simple_workflow.py  test_agents.py  test_multi_tier.py  validation_models.py  workflow.py
backend/app/services/: __init__.py  agno_chat_service.py  analytics_service.py  chat_service.py  chat_service_factory.py  code_execution_service.py  completion_service.py  conversation_service.py  database_chat_service.py  embedding_service.py  fake_orchestrator_service.py  fake_review_generator.py  hybrid_orchestrator_service.py  llm_logger.py  (+15 more)
backend/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pgadmin_servers.json
backend/docs/: CHAT_MESSAGE_STEP_TRACKING.md  CLERK_USER_SYNC.md  CLI_USAGE.md  CONVERSATIONAL_CONTEXT.md  ENVIRONMENT_SETUP.md  FINAL_SUMMARY.md  G2_SCRAPER_SCHEMA.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LLM_CALL_LOGGING_EXAMPLES.md  LLM_CALL_LOGGING_GUIDE.md  QUICKSTART_REVIEWS.md  REDIS_SETUP.md  REVIEW_EMBEDDINGS.md  SIMPLIFIED_ARCHITECTURE.md  SOURCE_COLUMN_ADDITION.md  START_HERE.md  TRUSTPILOT_SCRAPER_SCHEMA.md  TRUSTRADIUS_SCRAPER_SCHEMA.md  VECTOR_ID_REMOVAL.md
backend/examples/: APPROACH_COMPARISON.md  README.md  chatbot_pattern.py  simple_example.py  team_chat_example.py  test_agno_team_simple.py  test_orchestrator.py  tree_workflow_example.py
backend/guides/: CQRS_GUIDE.md  DISTRIBUTED_TRACING_GUIDE.md  TESTING_GUIDE.md
backend/scripts/: db_manager.py  deploy.sh  fix_g2_reviews.py  ingest_mock_reviews.py  install-deps.sh  output_structured_stream.py  seed_fake_sources.py  seed_real_sources.py  setup-db.sh  start-with-workers.sh  start.sh  status.sh  stop.sh  test-redis.py  test_code_execution.py  test_g2_scraper.py  test_trustpilot_crawler.py  test_trustradius_scraper.py
backend/tests/: conftest.py
(+381 files in other folders)
