[project]
name = "needleai-backend"
version = "0.1.0"
description = "A FastAPI + Next.js AI agent application with OpenRouter and LlamaIndex - Backend API"
authors = [
    {name = "Julien W.", email = "julien.wut@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fastapi", "llamaindex", "openrouter", "ai-agents", "chatbot", "websocket", "ai", "llm", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    # FastAPI and ASGI server
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    # Data validation and settings
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    # WebSocket support
    "websockets>=12.0",
    # Valkey for caching and session storage
    "valkey>=6.1.1",
    # Redis for Celery (use 5.0.x for better SSL support on macOS)
    "redis[hiredis]==5.0.8",
    # Database support (conditional)
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7", # For sync operations
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.0",
    # CORS and multipart support
    "python-multipart>=0.0.6",
    # Environment and configuration
    "python-dotenv>=1.0.0",
    # LlamaIndex Workflow Framework
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-index-llms-openrouter>=0.2.0",
    # OpenAI for embeddings and fallback LLM
    "openai>=1.3.7",
    # Vector Database support (conditional)
    "pinecone>=5.4.2",
    # pgvector for PostgreSQL vector operations
    "pgvector>=0.2.4",
    # NumPy for vector operations
    "numpy>=1.24.0",
    # HTTP client
    "httpx>=0.25.2",
    # Authentication and JWT
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Input sanitization and security
    "bleach>=6.1.0",
    # Logging and monitoring
    "rich>=13.7.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    # Distributed tracing with OpenTelemetry
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-zipkin>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    # CLI support
    "click>=8.1.7",
    # Async utilities
    "asyncio-throttle>=1.0.2",
    "tenacity>=8.2.3",
    # JSON serialization
    "orjson>=3.9.10",
    # Background tasks
    "celery>=5.3.4",
    # Health checks
    "psutil>=5.9.6",
    # Clerk Authentication
    "pyclerk>=0.0.1",
    # Stripe Payments
    "stripe>=13.0.0",
    # Apify Web Scraping
    "apify-client>=1.6.0",
    # CSV and Data Processing
    "pandas>=2.1.0",
    "openpyxl>=3.1.0", # For Excel file support
    # File handling
    "aiofiles>=23.2.0", # Async file operations
    "python-magic>=0.4.27", # File type detection
    # Web scraping utilities (if needed)
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0", # Async HTTP client for scrapers
    # Sentiment analysis (optional - can use LLM instead)
    "textblob>=0.17.0", # Simple sentiment analysis
    # Web search and NLP for orchestrator
    "duckduckgo-search>=6.0.0", # Free web search
    "scikit-learn>=1.5.0", # For TF-IDF and analytics
    "hdbscan>=0.8.33", # For density-based clustering
    "umap-learn>=0.5.5", # For dimension reduction before clustering
    # Visualization
    "plotly>=5.18.0", # For graph generation
    "kaleido>=0.2.1", # For PNG export from plotly
    "tabulate>=0.9.0",
    "sentence-transformers>=5.1.2",
    "langsmith>=0.4.46",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "langchain-anthropic>=1.2.0",
    "ddgs>=9.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "httpx>=0.25.2",  # For testing
]

test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[project.scripts]
needleai = "app.cli_commands.main:cli"

[project.urls]
Homepage = "https://github.com/Julien W./needleai"
Repository = "https://github.com/Julien W./needleai"
Issues = "https://github.com/Julien W./needleai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "B", "I"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
